<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<android.support.v7.widget.CardView
    android:id="@+id/cv_pm"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:contentPadding="10dp"
    card_view:cardElevation="10dp"
    card_view:cardBackgroundColor="#79ffd600"
    card_view:cardCornerRadius="10dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <TextView
        android:id="@+id/cv_news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_title"
        android:padding="10dp"
        android:textColor="#d10426"
        android:textStyle="bold"
        android:textSize="@dimen/text_heading"
        android:layout_gravity="center"/>

        <TextView
            android:id="@+id/cv_news_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/date"
            android:textColor="#add10426"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_news_image"
            android:layout_gravity="center"
            android:padding="@dimen/text_padding"
            android:contentDescription="@string/news_image_content_desc"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/cv_news_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textColor="#d10426"
            android:layout_gravity="center"
            />








    </LinearLayout>


</android.support.v7.widget.CardView>
    </LinearLayout>