<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_pm"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="6dp"
        card_view:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/cv_pm_from"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/from"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <TextView
                android:id="@+id/cv_pm_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/cv_pm_from"
                android:layout_alignRight="@id/cv_pm_from"
                android:layout_gravity="end"
                android:text="@string/date"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <TextView
                android:id="@+id/cv_pm_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/cv_pm_from"
                android:text="@string/subject"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>