<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/ll_cpoll_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAllCaps="true"
        android:text="@string/create_poll"
        android:id="@+id/tv_cpoll_title"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/text_size"/>
   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poll_title"
            android:id="@+id/tv_cpoll_title_name"
            android:textSize="@dimen/text_size"
            android:padding="@dimen/text_padding"/>
       <EditText
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:id="@+id/et_cpoll_title_name"
           android:hint="Title Name"
           android:textSize="@dimen/text_size"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_answers"
            android:id="@+id/tv_cpoll_num_ans"
            android:textSize="@dimen/text_size"
            android:padding="@dimen/text_padding"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/et_cpoll_num_ans"
            android:hint="Num"
            android:inputType="number"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAllCaps="true"
        android:text="Create"
        android:id="@+id/bt_cpoll_create"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/text_size"/>

</LinearLayout>
