<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/app_bar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_layout_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/dlp_ll_group_member"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/dlp_rv_selectedmember"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </android.support.v7.widget.RecyclerView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="SELECT THE CRITERIA"
                                android:textSize="@dimen/user_profile_text_size" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="100">

                            <EditText
                                android:id="@+id/dlp_et_firstname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="50"
                                android:ems="10"
                                android:hint="First Name"
                                android:inputType="textPersonName" />

                            <EditText
                                android:id="@+id/dlp_et_lastname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="50"
                                android:ems="10"
                                android:hint="Last Name"
                                android:inputType="textPersonName" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/dlp_et_mobileno"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Mobile Number"
                                android:inputType="phone"
                                android:maxLength="10" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/designation"
                                android:textSize="23dp" />

                            <Spinner
                                android:id="@+id/dlp_dd_designation"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:spinnerMode="dropdown" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/city"
                                android:textSize="23dp" />

                            <Spinner
                                android:id="@+id/dlp_dd_city"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:spinnerMode="dropdown" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/divison"
                                android:textSize="23dp" />

                            <Spinner
                                android:id="@+id/dlp_dd_division"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:spinnerMode="dropdown" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/roles"
                                android:textSize="23dp" />

                            <Spinner
                                android:id="@+id/dlp_dd_roles"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:spinnerMode="dropdown" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gender"
                                android:textSize="23dp" />

                            <Spinner
                                android:id="@+id/dlp_dd_gender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:spinnerMode="dropdown" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dl_doj"
                                android:textSize="23dp" />

                            <Spinner
                                android:id="@+id/dlp_dd_doj"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:spinnerMode="dropdown" />

                            <EditText
                                android:id="@+id/dlp_et_doj"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:editable="false"
                                android:ems="10"
                                android:focusable="false"
                                android:hint="@string/doj"
                                android:inputType="none" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dl_dob"
                                android:textSize="23dp" />

                            <Spinner
                                android:id="@+id/dlp_dd_dob"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:spinnerMode="dropdown" />

                            <EditText
                                android:id="@+id/dlp_et_dob"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:editable="false"
                                android:ems="10"
                                android:focusable="false"
                                android:hint="@string/dob"
                                android:inputType="none" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/dlp_btn_search_members"
                                style="@style/Base.Widget.AppCompat.Button.Colored"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="@dimen/btn_padding"
                                android:text="@string/btn_search_members"
                                android:textSize="@dimen/btn_text_size" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/dlp_ll_search_member"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="200dp">

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/dlp_rv_addmembers"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

                        </ScrollView>

                        <Button
                            android:id="@+id/dlp_btn_add_members"
                            style="@style/Base.Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="@dimen/btn_padding"
                            android:text="@string/btn_add_members"
                            android:textSize="@dimen/btn_text_size" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/dlp_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </RelativeLayout>
</FrameLayout>